fix: Attempts quiz stats table score value alignment

--- a/frontend/src/pages/make/quiz-stats/quiz-stats-component.scss
+++ b/frontend/src/pages/make/quiz-stats/quiz-stats-component.scss
@@ -75,5 +75,7 @@
     table[data-testid='attempt-stats-table'] th:last-child,
     table[data-testid='attempt-stats-table'] td:last-child {
         width: 30%;
+        text-align: left;
+        font-weight: inherit;
     }
 }
